--- a/articulo1.html
+++ b/articulo1.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="barra-superior">
         <ul>
-            <li><a href="https://leobay23.github.io">Inicio</a></li>
+            <li><a href="https://smforg.github.io/base.html">Inicio</a></li>
         </ul>
     </nav>
     <h1>None</h1>
