--- a/base.html
+++ b/base.html
@@ -12,7 +12,7 @@
         <img src="descarga.jpeg" alt="Imagentutorial">
      </div>
        <h2 aria-level="3" class="ui-search-item__title">None</h2>
-       <h2 aria-level="3" class="ui-search-item__title">Sin Stock</h2>
+       <h2 aria-level="3" class="ui-search-item__title">No disponible</h2>
        <h2 aria-level="3" class="ui-search-item__title">$00000</h2>
 </body>
 </html>
